# ads-weekly-report-kit-v0.1

./: .gitignore  README.md
ads-weekly-report-kit/: CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
ads-weekly-report-kit/examples/: meta_sample.csv
ads-weekly-report-kit/handbook/: FAQ.md  META_EXPORT_GUIDE.md
ads-weekly-report-kit/outputs/: clean.xlsx  weekly_report.html
ads-weekly-report-kit/src/adswk/: __init__.py  aggregate.py  charts.py  cli.py  export_xlsx.py  io.py  kpi.py  mapping.py  normalize.py  report_html.py
ads-weekly-report-kit/templates/: meta_ads.yaml
ads-weekly-report-kit/tests/: test_smoke.py
ads-weekly-report-kit/tools/: screenshot_report.py
tools/: render_svg.py
